# ml_framework

./: .coverage  .gitignore  README.md  pyproject.toml  run_tests.ps1
.github/workflows/: github-actions-demo.yml
Flowchart/: ml_framework_diagram.drawio  ml_framework_flowchart.drawio
Tables/: Classification_Results.xlsx  Clustering_Results.xlsx  Regression_Results.xlsx
src/: Analyzer.py  main.py  main_classification.py  main_clustering.py  main_regression.py  run_analyzer.py  run_classifier.py
src/Data_Classification/: Classifier.py
src/Data_Clustering/: Clustering.py
src/Data_Regression/: Regressor.py
src/ml_framework/data_analysis/: analyzer_whole.py  data_cleaning.py  data_encoding.py  data_ingestion.py  data_sampling.py  data_visualization.py
src/ml_framework/data_classification/: ann_classifier_tf.py  ann_tf_classifier.py  classifier.py  decision_tree_classifier.py  knn.py  knn_classifier.py  logistic_regression.py  random_forest_classifier.py  run_classifier.py  run_eda_classification.py  support_vector_classifier.py  xgboost_classifier.py
src/ml_framework/data_clustering/: agglomerative_clustering.py  clustering.py  dbscan_clustering.py  hdbscan_clustering.py  k_means_clustering.py  mean_shift_clustering.py  run_eda_clustering.py
src/ml_framework/data_input/: data_read_gui
src/ml_framework/data_regression/: ann_regressor_tf.py  ann_tf_regressor.py  decision_tree_regressor.py  knn_regressor.py  linear_regression.py  random_forest_regressor.py  regressor.py  run_eda_regression.py  run_regressor.py  support_vector_regressor.py  xgboost_regressor.py
src/ml_framework/tools/: helper_functions.py
src/tools/: helper_functions.py
tests/: example1_oop.py  example2_oop.py
tests/test_data_analysis/: test_data_cleaning.py  test_data_encoding.py  test_data_ingestion.py  test_data_sampling.py  test_data_visualization.py
tests/test_data_classification/: test_ann_tf_classifier.py  test_classifier.py  test_decision_tree_classifier.py  test_knn_classifier.py  test_logistic_regression.py  test_random_forest_classifier.py  test_run_eda_classification.py  test_support_vector_classifier.py  test_xgboost_classifier.py
