[tool.poetry]
name = "ml-framework"
version = "0.1.0"
description = "This project defines the framework for future ML projects"
authors = ["dlp <mossdet.detector@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
jupyterlab = "4.1"
seaborn = "0.13.2"
scikit-learn = "1.4"
xgboost = "2.0.3"
imbalanced-learn = "0.12"
optuna = "3.5"
livelossplot = "0.5.5"
plotly = "5.19.0"
openpyxl = "3.1.2"


###Short Version
## TensorFlow experiences an issue with poetry and tensorflow metadata since >=2.11, this is a temporary workaround. 
## Related to https://github.com/python-poetry/poetry/issues/8271, inspired from https://github.com/tensorflow/tensorflow/blob/adb39b04e9cb116df4659a7e2de9eea27e62f25c/tensorflow/tools/pip_package/setup.py#L148-L162
## https://github.com/tensorflow/tensorflow/blob/adb39b04e9cb116df4659a7e2de9eea27e62f25c/tensorflow/tools/pip_package/setup.py#L107-L108
## https://github.com/python-poetry/poetry/issues/8271#issuecomment-1697740447
#tensorflow = {version = "2.16.1" }
#tensorflow-intel = { version = "2.16.1" }
#tensorflow-io-gcs-filesystem = {version = "< 0.32.0", markers = "platform_system == 'Windows'"}

# Issue between poetry and tensorflow metadata since >=2.11
# This is a temporary workaround
# related to https://github.com/python-poetry/poetry/issues/8271
# Inspired from https://github.com/tensorflow/tensorflow/blob/adb39b04e9cb116df4659a7e2de9eea27e62f25c/tensorflow/tools/pip_package/setup.py#L148-L162
tensorflow = {version = "2.15.0" }
tensorflow-intel = { version = "^2.13.0", platform = "win32" }
tensorflow-cpu = [
    { version = "^2.13.0", platform = "linux", markers = "platform_machine!='arm64' and platform_machine!='aarch64'" },
    { version = "^2.13.0", platform = "darwin", markers = "platform_machine!='arm64' and platform_machine!='aarch64'" },]
tensorflow-cpu-aws = { version = "^2.13.0", platform = "linux", markers = "platform_machine=='arm64' or platform_machine=='aarch64'" }
# https://github.com/tensorflow/tensorflow/blob/adb39b04e9cb116df4659a7e2de9eea27e62f25c/tensorflow/tools/pip_package/setup.py#L107-L108
# https://github.com/python-poetry/poetry/issues/8271#issuecomment-1697740447
tensorflow-io-gcs-filesystem = [
    { version = ">= 0.23.1", markers = "platform_machine!='arm64' or platform_system!='Darwin'" },
    { version = "< 0.32.0", markers = "platform_system == 'Windows'" }
]

[tool.poetry.group.dev.dependencies]
pytest = "8.0.2"
pytest-cov = "4.1.0"
black = "24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
